Closed
Bug 1157986
Opened 10 years ago
Closed 10 years ago
"Assertion failure: false (We should be reviving the graph?)" when no audio output device is installed
Categories
(Core :: Web Audio, defect)
Core
Web Audio
Tracking
()
RESOLVED
FIXED
mozilla40
Tracking | Status | |
---|---|---|
firefox40 | --- | fixed |
People
(Reporter: jruderman, Assigned: padenot)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(2 files)
15.59 KB,
text/plain
|
Details | |
1.28 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
On some machines, simply creating an AudioContext hits a fatal assert:
Assertion failure: false (We should be reviving the graph?), at dom\media\MediaStreamGraph.cpp:3225
This assertion was added in https://hg.mozilla.org/mozilla-central/rev/82bbdffc624b (bug 1094764)
Previously: bug 1070457
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → padenot
Assignee | ||
Comment 1•10 years ago
|
||
This is a copy/paste issue from AudioContextOperationControlMessage.
Also, until we have audio output device enumaration APIs in cubeb, we can't detect
this situation, so we have to make the code not crash. cubeb will have such API
as part of bug 1142613.
Attachment #8598606 -
Flags: review?(roc)
Attachment #8598606 -
Flags: review?(roc) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in
before you can comment on or make changes to this bug.
Description
•