Bug 1157986 - Remove assert in GraphStartedNotificationControlMessage::RunDuringShutdown r=roc

This is a copy/paste issue from AudioContextOperationControlMessage.

Also, until we have audio output device enumaration APIs in cubeb, we can't detect
this situation, so we have to make the code not crash. cubeb will have such API
as part of bug 1142613.